# pdm-name-example

./: add.sh  pyproject.toml  setup.py
example/: __version__.py
pdm-name-example/: __version__.py
