[project]
name = "pdm-name-example"
version = ""
description = ""
authors = [
    {name = "Gregory Danielson", email = "gregory.danielson3@gmail.com"},
]
dependencies = []
dev-dependencies = []
required-python = ">=3.7"
dynamic = []
license = {text = ""}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
