[project]
name = "pdm-name-example"
version = "1.0.0"
description = "example project"
authors = [
    {name = "Gregory Danielson", email = "gregory.danielson3@gmail.com"},
]
dependencies = []
dev-dependencies = []
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "GPL"}

[project.optional-dependencies]
reqs = [
    "requests[security]~=2.25",
    "lxml~=4.6",
    "phonenumbers~=8.12",
]

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
